[package]
authors = ["Bradley Harden <bradleyharden@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "quickstart-0"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.4"
rtt-target = {version = "0.2.2", features = ["cortex-m"] }
cortex-m-rtic = { version = "^0.5.5", git = "https://github.com/rtic-rs/cortex-m-rtic" }

[dependencies.atsamd-hal]
path = "../atsamd/hal"
version = "~0.9"
default-features = false

[features]
# ask the HAL to enable atsamd51n20a support
default = ["atsamd-hal/samd51n20a",
           "atsamd-hal/samd51",
           "atsamd-hal/samd51n20a-rt",
           "atsamd-hal/unproven"]

# this lets you use `cargo fix`!
[[bin]]
name = "quickstart-0"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
