[package]
authors = ["Bradley Harden <bradleyharden@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "quickstart-0"
version = "0.1.0"

[dependencies]
atsamd-hal = "0.12"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
cortex-m-rtic = { version = "0.6.0-alpha.0", git = "https://github.com/rtic-rs/cortex-m-rtic" }

[features]
# ask the HAL to enable atsamd51n20a support
default = ["atsamd-hal/samd51n",
           "atsamd-hal/samd51n-rt",
           "atsamd-hal/unproven"]

# this lets you use `cargo fix`!
[[bin]]
name = "quickstart-0"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
